# cleangpt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sample.py  train_char copy.py  train_char.py  train_char_cosine.py  train_sort.py
cleanrlhf/: model copy.py  model.py
data/shakespeare/: prepare.py
data/shakespeare_char/: prepare.py
playground/: attention.py
